Externalizing customer api url and configuring bean for RestTemplate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ springdoc.swagger-ui.path=/swagger-ui.html
 logging.level.root=warn
 logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
+#customer service
+customer.service.url=http://localhost:8080/customers
