Adding application banner

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-
+#application port
 server.port=9090
 #H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:accountdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -25,3 +25,5 @@ logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
 #customer service
 customer.service.url=http://localhost:8080/customers
+#banner
+spring.banner.location=classpath:banner.txt
